# LLM-Eval-CI-CD-Pipeline

./: .env.example  .evalrc.example.yml  .gitignore  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml
.github/workflows/: ci.yml  llm-eval.yml
backend/: Dockerfile  pyproject.toml
backend/src/api/: __init__.py  config.py  db.py  main.py  middleware.py  models.py
backend/src/api/routers/: __init__.py  cases.py  health.py  results.py  runs.py
backend/tests/: conftest.py  test_cases.py  test_results.py  test_runs.py
docs/: self-hosting.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: .gitkeep
frontend/src/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dataset/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/runs/[runId]/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/components/dashboard/: MetricChart.tsx  RunsTimeline.tsx
frontend/src/components/dataset/: CaseRow.tsx  DatasetTable.tsx  UploadDialog.tsx
frontend/src/components/runs/: AggregateCard.tsx  CaseResultRow.tsx  RunResultsTable.tsx
frontend/src/components/ui/: .gitkeep
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
runner/: Dockerfile  pyproject.toml
runner/src/llmeval/: __init__.py  cli.py  config.py  http_mode.py  models.py  poster.py  runner.py  scoring.py
runner/tests/: __init__.py  test_config.py  test_http_mode.py  test_scoring.py
supabase/migrations/: 001_initial_schema.sql
