[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmeval"
version = "0.1.0"
description = "LLM evaluation runner CLI"
requires-python = ">=3.11"
dependencies = [
    "typer==0.12.3",
    "ragas==0.1.21",
    "litellm==1.40.29",
    "httpx==0.27.0",
    "pyyaml==6.0.1",
    "pydantic==2.7.4",
    "python-dotenv==1.0.1",
    "rich==13.7.1",
    "numpy==1.26.4",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-httpx==0.30.0",
    "respx==0.21.1",
]

[project.scripts]
llmeval = "llmeval.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llmeval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
